# nexus-quality-engineering-platform

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  playwright.config.py  pyproject.toml  requirements.txt
.github/workflows/: quality-gate.yml  regression.yml  smoke.yml
app/: database.py  main.py  models.py
app/templates/: dashboard.html  login.html
config/environments/: dev.yaml  docker.yaml  prod.yaml  qa.yaml
config/schemas/: user_schema.json
docs/: architecture.md  cicd.md  execution-flow.md  reporting.md
sql/schema/: users.sql
sql/seed/: users_seed.sql
src/nexus_qe/api/auth/: auth_client.py  init.py
src/nexus_qe/api/client/: __init__.py  api_client.py
src/nexus_qe/api/contracts/: auth_schema.json
src/nexus_qe/api/models/: __init__.py  api_response.py
src/nexus_qe/api/validators/: init.py  response_validator.py  schema_validator.py
src/nexus_qe/core/assertions/: __init__.py  assertion.py
src/nexus_qe/core/base/: __init__.py  base_service.py
src/nexus_qe/core/config/: __init__.py  config_models.py  environment_loader.py  secrets_manager.py  settings.py
src/nexus_qe/core/constants/: framework_constants.py  init.py
src/nexus_qe/core/exceptions/: __init__.py  framework_exceptions.py
src/nexus_qe/core/retry/: __init__.py  retry_engine.py
src/nexus_qe/data/factories/: __init__.py  user_factory.py
src/nexus_qe/data/models/: init.py
src/nexus_qe/database/assertions/: __init__.py  database_assertions.py
src/nexus_qe/database/connections/: __init__.py  database_manager.py
src/nexus_qe/database/queries/: __init__.py  query_executor.py
src/nexus_qe/observability/logging/: init.py  logger_manager.py
src/nexus_qe/observability/metrics/: __init__.py  execution_timer.py
src/nexus_quality_engineering_platform.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py
tests/accessibility/: test_accessibility.py
tests/api/: test_authentication_api.py  test_mocked_users_api.py  test_users_api.py
tests/database/: test_database_validation.py  test_user_count_validation.py
tests/e2e/: test_user_lifecycle.py
tests/ui/regression/: test_dashboard_regression.py
tests/ui/smoke/: test_login_smoke.py
tests/visual/: test_dashboard_visual.py
(+26 files in other folders)
